--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   get_it: ^8.0.3
   go_router: ^16.0.0
   intl: ^0.20.2
+  pdf: ^3.11.3
+  printing: ^5.14.2
   signature: ^6.3.0
 
 dev_dependencies:
