--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   intl: ^0.20.2
   pdf: ^3.11.3
   printing: ^5.14.2
+  shared_preferences: ^2.5.3
   signature: ^6.3.0
 
 dev_dependencies:
